# sensor-app-android

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  filter.cpp  filter.h  platform.c  platform.h
app/src/main/java/com/example/sensorapp/: AppHttpClient.java  Filter.java  JniHandler.java  MainActivity.java  SensorMgr.java
app/src/main/res/layout/: activity_main.xml
